# resume-customizer-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PHASE6_CONTEXT.md  PHASE7_CONTEXT.md  PHASE8_FINAL_REPORT.md  PHASE8_TEST_SUMMARY.md  README.md  coverage.json  pyproject.toml  test_manual_phase_2.py
.claude/: init.md
config/: skill_synonyms.yaml
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  PHASE2_MANUAL_TESTING.md  PHASE7_MANUAL_TESTING.md  QUICK_START.md  TECHNICAL_DESIGN.md  USER_GUIDE.md  job_template.md  phase3_manual_testing.md  resume_template.md
examples/: README.md  manual_test_phase6.py  test_ai_features.py  test_budi_resume.py  test_phase4_customization.py  test_phase5_generation.py  test_phase6_database.py  test_phase7_storage.py
examples/jobs/: fullstack_engineer_job.md  senior_backend_job.md
examples/resumes/: budi_resume.md
examples/scripts/: test_manual_phase_2.py
src/resume_customizer/: __init__.py  config.py  server.py
src/resume_customizer/core/: ai_service.py  customizer.py  exceptions.py  matcher.py  models.py
src/resume_customizer/generators/: __init__.py  template_engine.py
src/resume_customizer/mcp/: handlers.py  tools.py
src/resume_customizer/parsers/: markdown_parser.py  validator.py
src/resume_customizer/storage/: database.py  session.py
src/resume_customizer/utils/: helpers.py  logger.py  validation.py
templates/: ats_optimized.html  classic.html  modern.html
tests/: conftest.py  test_achievement_ranking.py  test_ai_integration.py  test_ai_service.py  test_customizer.py  test_database.py  test_exceptions.py  test_handlers_coverage.py  test_handlers_generate_files.py  test_handlers_integration.py  test_helpers.py  test_history.py  test_logger.py  test_match_scoring.py  test_matcher.py  test_mcp_integration.py  test_session.py  test_template_engine.py  test_tools.py  test_utils_validation.py  test_validator.py
tests/fixtures/: test_job.md  test_resume.md
